--- a/park_mobil/pubspec.yaml
+++ b/park_mobil/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.15.0-116.0.dev <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -29,15 +29,37 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  stacked: ^2.2.5
+  stacked_services: 0.8.15
+  stacked_crashlytics:
+  injectable:
+  google_fonts: ^2.1.0
+  provider: ^5.0.0
+  responsive_framework: ^0.1.4
+  flutter_svg: ^0.22.0
+  syncfusion_flutter_calendar: ^19.2.46
+  flutter_colorpicker: ^0.6.0
+  cached_network_image: ^3.1.0
+  flutter_spinkit: ^5.1.0
+  get:
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  syncfusion_localizations: ^19.3.45
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: 2.1.2
+  stacked_generator: 
+
+  
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -58,7 +80,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
