--- a/park_mobil/pubspec.yaml
+++ b/park_mobil/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   syncfusion_localizations: ^19.3.45
+  dropdown_search: ^1.0.3
+  syncfusion_flutter_charts: ^19.3.45+1
+  bottom_navy_bar: ^6.0.0
 
 
 dev_dependencies:
