--- a/backend/rezervation/pom.xml
+++ b/backend/rezervation/pom.xml
@@ -17,6 +17,11 @@
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
+	<dependency>
+    <groupId>javax.xml.bind</groupId>
+     <artifactId>jaxb-api</artifactId>
+    <version>2.3.0</version>
+ </dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -43,6 +48,7 @@
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
+			 
 		</dependency>
 
 		<dependency>
@@ -55,6 +61,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+    <groupId>io.nats</groupId>
+    <artifactId>java-nats-streaming</artifactId>
+    <version>2.2.3</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
