--- a/backend/rezervation/src/main/resources/application.properties
+++ b/backend/rezervation/src/main/resources/application.properties
@@ -1,16 +1,14 @@
 # MySQL properties
 spring.datasource.url=jdbc:mysql://localhost:3306/rezervation
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialecT= org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.dialecT= org.hibernate.dialect.MySQL5InnoDBDialect
 server.port=8080
 server.address=127.0.0.1
 server.servlet.context-path=/api/rezervation
-
-
