--- a/backend/carpark/composer.json
+++ b/backend/carpark/composer.json
@@ -6,8 +6,9 @@
     "type": "project",
     "require": {
         "php": "^8.0",
-        "byrnedo/php-nats-streaming": "^0.2.4",
-        "laravel/lumen-framework": "^8.3.1"
+        "basis-company/nats": "^0.3.0",
+        "laravel/lumen-framework": "^8.3.1",
+        "sonicgd/php-nats-streaming": "^0.2.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
